[package]
name = "gnaw"
version = "0.0.2"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "Conveniently chip small pieces off a slice or `str` to use elsewhere."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/gnaw"
homepage = "https://github.com/Tamschi/gnaw/tree/v0.0.2"
documentation = "https://docs.rs/gnaw/0.0.2"
keywords = ["narrow", "consume", "drain", "slices"]
categories = ["parsing"]
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/meta_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"LICENSE-*",
	"README.md",
]

[badges]
travis-ci = { repository = "Tamschi/gnaw", branch = "unstable" }
is-it-maintained-issue-resolution = { repository = "Tamschi/gnaw" }
is-it-maintained-open-issues = { repository = "Tamschi/gnaw" }
maintenance = { status = "experimental" }

[dev-dependencies]
cargo-husky = "1.5.0"
doc-comment = "0.3.3"
git_info = "0.1.2"
version-sync = "0.9.1"
